@startuml diagram

' Définition des classes
class MainWindow {
    + QToolBar toolbar
    + QStackedWidget stack
    + QAction btn_tasks
    + QAction btn_users
    + MainWindow(MainController)
}

class MainController {
    + TaskController task_controller
    + UserController user_controller
    + showPageTasks()
    + showPageUsers()
    + start()
}

class TaskController {
    - TaskModel model
    - TaskView view
    + add_task()
    + remove_task()
    + update_task_list()
}

class UserController {
    - UserModel model
    - UserView view
    + add_user()
    + remove_user()
    + update_user_list()
}

class TaskView {
    + QVBoxLayout layout
    + QLineEdit task_input
    + QPushButton add_button
    + QListWidget task_list_widget
    + show_error(message)
}

class UserView {
    + QVBoxLayout layout
    + QLineEdit user_input
    + QPushButton add_button
    + QListWidget user_list_widget
    + show_error(message)
}

class TaskModel {
    - list task_list
    + create(user)
    + remove(index)
    + reads()
}

class UserModel {
    - list user_list
    + create(user)
    + remove(index)
    + reads()
}

' Relations entre les classes
MainController --> MainWindow
MainController --> TaskController
MainController --> UserController
TaskController --> TaskView
TaskController --> TaskModel
UserController --> UserView
UserController --> UserModel

@enduml